force-app/main/default/objects/Other_Limits_and_Liabilities__x/Other_Limits_and_Liabilities__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>OtherLimitsAndLiabilities</externalName>
    <label>Other Limits and Liabilities</label>
    <pluralLabel>Other Limits and Liabilities</pluralLabel>
</CustomObject>