force-app/main/default/objects/Other_Limits_and_Liabilities__x/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Account Name</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>