force-app/main/default/objects/Other_Limits_and_Liabilities__x/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CAPS</complianceGroup>
    <description>Name of the branch</description>
    <externalDeveloperName>Branch</externalDeveloperName>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>