force-app/main/default/objects/Other_Limits_and_Liabilities__x/fields/CCR__c.field-meta.xml
<CustomField>
    <fullName>CCR__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Customer Credit Rating</description>
    <label>CCR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>