force-app/main/default/objects/Other_Limits_and_Liabilities__x/fields/CPID__c.field-meta.xml
<CustomField>
    <fullName>CPID__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CAPS</complianceGroup>
    <description>The controlling post which account belongs to</description>
    <externalDeveloperName>CPID</externalDeveloperName>
    <label>CPID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>