force-app/main/default/objects/Other_Limits_and_Liabilities__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CAPS</complianceGroup>
    <description>Id of the associated customer</description>
    <externalDeveloperName>CustomerId</externalDeveloperName>
    <label>Customer</label>
    <length>255</length>
    <referenceTargetField>Account.External_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Other Limits and Liabilities</relationshipLabel>
    <relationshipName>Other_Limits_and_Liabilities</relationshipName>
    <type>IndirectLookup</type>
</CustomField>