force-app/main/default/objects/Other_Limits_and_Liabilities__x/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Date Closed</description>
    <label>Date Closed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>