force-app/main/default/objects/Other_Limits_and_Liabilities__x/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CAPS</complianceGroup>
    <description>Date of creation of the OLL account in CAP</description>
    <externalDeveloperName>DateOpened</externalDeveloperName>
    <label>Date Opened</label>
    <type>DateTime</type>
</CustomField>