force-app/main/default/objects/Other_Limits_and_Liabilities__x/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Industry</description>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>