force-app/main/default/objects/Other_Limits_and_Liabilities__x/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CAPS</complianceGroup>
    <description>The balance of total active sub-arrangements/facilities under the limit</description>
    <externalDeveloperName>Limit</externalDeveloperName>
    <label>Limit ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>