force-app/main/default/objects/Other_Limits_and_Liabilities__x/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Product Code</description>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>