force-app/main/default/objects/Other_Limits_and_Liabilities__x/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Display Product name associated to the Sub product code and product code.  This information to come from reference data within Salesforce</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>