force-app/main/default/objects/Other_Limits_and_Liabilities__x/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Relationship</description>
    <externalDeveloperName>Relationship</externalDeveloperName>
    <label>Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>