force-app/main/default/objects/Other_Limits_and_Liabilities__x/fields/Source_System_Status__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Status__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>The current stage of the account in the life cycle of the account.</description>
    <label>Source System Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>